add remove user access route
